--- a/AddressBook/core/templates/core/base.html
+++ b/AddressBook/core/templates/core/base.html
@@ -4,6 +4,7 @@
     <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="icon" type="image/x-icon" href="favicon.ico">
             <script src="https://cdn.tailwindcss.com"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
             <title>{% block title%}{%endblock%} | Address Book</title>
