--- a/AddressBook/core/templates/core/base.html
+++ b/AddressBook/core/templates/core/base.html
@@ -46,7 +46,7 @@
             <div class="w=1/3">
                 <h3 class="mb-5 font-semibold text-gray-400">Menu</h3>
                 <ul class="space-y-2">
-                    <li><a href="https://weii.pollub.pl/" class="text-lg text-teal-500 hover:text-teal-700">Politechnika Lubelska</a></li>
+                    <li><a href="https://weii.pollub.pl/" target="_blank" class="text-lg text-teal-500 hover:text-teal-700">Politechnika Lubelska</a></li>
                     <li><a href="https://www.linkedin.com/in/hubert-szelepusta-202342232/" target="_blank" class="text-lg text-teal-500 hover:text-teal-700">LinkedIn</a></li>
                     <li><a href="https://www.linkedin.com/in/hubert-szelepusta-202342232/" target="_blank" class="text-lg text-teal-500 hover:text-teal-700">Privacy</a></li>
                     <li><a href="https://www.linkedin.com/in/hubert-szelepusta-202342232/" target="_blank" class="text-lg text-teal-500 hover:text-teal-700">Terms of Use</a></li>
