--- a/AddressBook/Address/templates/address/form.html
+++ b/AddressBook/Address/templates/address/form.html
@@ -17,6 +17,7 @@
     {{form.non_field_errors}}
     </div>
 {%endif%}
+    <p class='mb-6 text-2xl text-left text-red-500 underline'>Green fields are required, Gray fields are not required</p>
     <button class="mt-6 py-4 px-8 text-lg bg-green-500 hover:bg-teal-700 rounded-xl text-white">Submit</button>
 </form>
 {% endblock %}
